--- a/modal/src/index.css
+++ b/modal/src/index.css
@@ -1,13 +1,27 @@
 body {
-  margin: 0;
+  margin: 10px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(211, 211, 211);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.App-title{
+  padding: 20px 20px ;
+  text-align: center;
+
+}
+p{
+  text-align: left;
+}
+button{
+ background-color:red;
+ color:aliceblue;
+ width: 80px;
 }
